--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<section class="third firstSection">
 			<div class="container__thirdSection">
 				<h2 class="title__container">Vous possédez déjà<br /> une smart wear ?</h2>
-				<p class="text__container">Pas de problèmes. <br />Rendez vous sur le store puis télécharger l'application depuis votre smart wear. Rentrez ainsi votre objectif.</p>
+				<p class="text__container">Pas de problèmes. <br />Rendez vous sur le store puis télécharger l'application depuis votre smart wear. <br />Lancez l'application et laissez vous guider. Un test run va alors se lancer pour évaluer votre allure.</p>
 			</div>
 		</section>
 
