--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 		<section class="second firstSection">
 			<div class="container__secondSection">
-				<h2 class="title__container">Améliorez votre course <br />grâce au pulsation Wavy</h2>
-				<p class="text__container">Paramétrer tous simplement via l'application votre objectif à atteindre. Vous avez le choix entre une distance, une durée ou bien un rythme a suivre de PPM.<br /> Validez, puis lancez vous et garder le rythme à l'aide des vibrations sur votre poignet.</p>
+				<h2 class="title__container">Perfectionnez votre course <br />grâce à Wavy</h2>
+				<p class="text__container">Paramétrez simplement votre objectif à atteindre via l'application. Vous avez le choix entre une distance, une durée ou bien un rythme de foulée par minute à suivre.<br /> Validez, puis lancez-vous et garder le rythme à l'aide des vibrations sur votre poignet.</p>
 				<div class="container__links">
 					<a href="product.html">Découvrir <img class="img__containerLinks" src="src/images/arrow.png"></a>
 				</div>
@@ -44,8 +44,8 @@
 
 		<section class="third firstSection">
 			<div class="container__thirdSection">
-				<h2 class="title__container">Vous possédez déjà<br /> une smart wear ?</h2>
-				<p class="text__container">Pas de problèmes. <br />Rendez vous sur le store puis télécharger l'application depuis votre smart wear. <br />Lancez l'application et laissez vous guider. Un test run va alors se lancer pour évaluer votre allure.</p>
+				<h2 class="title__container">Vous possédez déjà<br />une smartwatch ?</h2>
+				<p class="text__container">Pas de problèmes !<br />Rendez-vous sur le store puis téléchargez l'application depuis votre smartwatch ou votre smartphone. <br />Lancez l'application et laissez-vous guider. Une course d'essai va alors se lancer pour évaluer votre niveau.</p>
 			</div>
 		</section>
 
