--- a/product.html
+++ b/product.html
@@ -23,9 +23,9 @@
     <div class="container__item">
       <div class="content__description">
         <button class="item__new">New</button>
-        <h2 class="title__product">Wavy - Ghost Runner</h2>
+        <h2 class="title__product">Wavy - The Ghost Runner</h2>
         <img src="src/images/star.png" alt="" class="img__star"/>
-        <p class="description__product">La montre connectée Ghost Runner est belle mais pas seulement. Elle vous aide à atteindre vos objectifs grâce a des vibrations sur votre poignet.</p>
+        <p class="description__product">La montre connectée Wavy est élégante mais pas seulement. Elle vous aide à atteindre vos objectifs grâce à des vibrations sur votre poignet.</p>
         <div class="content__quantity">
           <p class="quantity__item">Quantité</p>
           <span class="input-number-decrement">–</span><input class="input-number" type="text" value="1" min="0" max="10"><span class="input-number-increment">+</span>
